<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/onlinecontent_menu_item" android:title="@string/menu_item_content" android:icon="@android:drawable/ic_menu_gallery"></item>
<item android:id="@+id/workbook_menu_item" android:title="@string/menu_item_workbook" android:icon="@android:drawable/ic_menu_add"></item>
<item android:id="@+id/instructions_menu_item" android:title="@string/menu_item_instructions" android:icon="@android:drawable/ic_menu_help"></item>
<item android:id="@+id/share_menu_item" android:title="@string/menu_item_share" android:icon="@android:drawable/ic_menu_share"></item>
<item android:id="@+id/about_menu_item" android:title="@string/menu_item_about" android:icon="@android:drawable/ic_menu_info_details"></item>
</menu>
